Try to fix whitespace again

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,3 @@
   background-color: lightgray;
 }
 
-.content p {
-  white-space: pre-wrap;
-}
